@@ -1,4 +1,4 @@
-; $Id$
+; $Id: en-us.ini
 ; Joomla! Project
 ; Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.
 ; License GNU General Public License version 2 or later; see LICENSE.txt
@@ -44,9 +44,9 @@ INSTL_DATABASE_PASSWORD_DESC="For site security using a password for the mysql a
 INSTL_DATABASE_PASSWORD_LABEL="Password"
 INSTL_DATABASE_PREFIX_DESC="Choose a database prefix. Ideally, three or four characters long, contain only alphanumeric characters, and MUST end in an underscore. Do not use &quot;bak_&quot; since this is used for backup tables."
 INSTL_DATABASE_PREFIX_LABEL="Table Prefix"
-INSTL_DATABASE_TYPE_DESC="This is probably &quot;mysql&quot;"
+INSTL_DATABASE_TYPE_DESC="This is probably &quot;mysqli&quot;"
 INSTL_DATABASE_TYPE_LABEL="Database Type"
-INSTL_DATABASE_USER_DESC="Either something as "_QQ_"root"_QQ_" or a username given by the hoster"
+INSTL_DATABASE_USER_DESC="Either something as "_QQ_"root"_QQ_" or a username given by the host"
 INSTL_DATABASE_USER_LABEL="Username"
 INSTL_DATABASE_TITLE="Connection Settings"
 INSTL_DATABASE_DESC="<p>A Joomla! website stores all of its data in a database. This screen gives the installation program the information needed to create this database.</p><p> If you are installing Joomla! on a remote web server, you will need to get this information from your host.</p><p>Some web hosts require that you create the database before you install Joomla. If you get the message "_QQ_"Could not connect to the database"_QQ_", check that your user name and password are correct. If you still get this message, check with your host to see if you need to create the database before installing Joomla.</p>" 
@@ -81,7 +81,7 @@ INSTL_SITE_NAME_DESC="Enter the name of your Joomla! site.<br />Optional: You ca
 INSTL_SITE_METADESC_LABEL="Meta Description"
 INSTL_SITE_METADESC_TITLE_LABEL="Enter a description of the overall Web site that is to be used by search engines. Generally, a maximum of 20 words is optimal."
 INSTL_SITE_METAKEYS_LABEL="Meta Keywords"
-INSTL_SITE_METAKEYS_TITLE_LABEL="INSTL_SITE_METAKEYS_TITLE_LABEL="Enter the keywords and phrases that best describe your Web site. Separate keywords and phrases with a comma."
+INSTL_SITE_METAKEYS_TITLE_LABEL="Enter the keywords and phrases that best describe your Web site. Separate keywords and phrases with a comma."
 INSTL_SITE_CONF_TITLE="Confirm the Admin email and Password."
 INSTL_SITE_CONF_DESC="Enter your email address. This will be the email address of the Web site Super Administrator.<br />Enter a new password and then confirm it in the appropriate fields. You may change the default username <strong>admin</strong>. These will be the Username and password that you will use to login to the Administrator Control Panel at the end of the installation.<br /> If you are migrating, you can ignore this section. Your current settings will be automatically migrated."
 INSTL_SITE_LOAD_SAMPLE_TITLE="Load sample data"
@@ -121,7 +121,7 @@ INSTL_DATABASE_INVALID_MYSQL_VERSION="You need MySQL 5.0.4 or higher to continue
 INSTL_DATABASE_INVALID_TYPE="Please select the database type"
 INSTL_DATABASE_NAME_TOO_LONG="The MySQL database name must be a maximum of 64 characters."
 INSTL_DATABASE_PREFIX_INVALID_CHARS="The MySQL table prefix must start with a letter and be followed by only letters, numbers or underscores."
-INSTL_DATABASE_INVALID_NAME="MySQL versions previous to 5.1.6 may not contain periods or other "_QQ_"special"_QQ_" characters in the name. Your version is: %s"
+INSTL_DATABASE_INVALID_NAME="MySQL versions prior to 5.1.6 may not contain periods or other "_QQ_"special"_QQ_" characters in the name. Your version is: %s"
 INSTL_DATABASE_NAME_INVALID_SPACES="MySQL database names and table names may not begin or end with spaces."
 INSTL_DATABASE_NAME_INVALID_CHAR="No MySQL identifier can contain a NUL ASCII(0x00)."
 
