@@ -1,19 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
-<metafile
-	version="1.6"
-	client="installation">
-	<name>English (United States)</name>
+<metafile version="1.6" client="installation">
+	<name>US English - en-US</name>
 	<version>1.6.0</version>
-	<creationDate>2011</creationDate>
-	<author>Joomla! Project</author>
+	<creationDate>2011-01-04</creationDate>
+	<author>US Translation Team</author>
+	<authorEmail>Please see translation section on Joomla.org</authorEmail>
+	<authorUrl>http://www.joomla.org</authorUrl>
 	<copyright>Copyright (C) 2005 - 2011 Open Source Matters. All rights reserved.</copyright>
 	<license>GNU General Public License version 2 or later; see LICENSE.txt</license>
-	<description></description>
+	<description>en-US installation language pack</description>
 	<files>
 		<filename>en-US.ini</filename>
 	</files>
 	<metadata>
-		<name>English (US)</name>
+		<name>English (United States)</name>
 		<tag>en-US</tag>
 		<rtl>0</rtl>
 	</metadata>
