@@ -1,6 +1,0 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<!-- saved from url=(0065)http://downloads.joomlacode.org/frsrelease/1/5/7/15765/index.html -->
-<HTML><HEAD>
-<META http-equiv=Content-Type content="text/html; charset=windows-1251">
-<META content="MSHTML 6.00.5730.11" name=GENERATOR></HEAD>
-<BODY bgColor=#ffffff></BODY></HTML>
