@@ -201,6 +201,8 @@ JYES="បាទ/ចាស"
 ; Framework strings necessary when no lang pack is available
 JLIB_FORM_VALIDATE_FIELD_REQUIRED="វាល​ទាមទារ៖ %s"
 JLIB_FORM_VALIDATE_FIELD_INVALID="វាល​ពុំ​ត្រឹមត្រូវ៖ %s"
+JLIB_ENVIRONMENT_SESSION_EXPIRED="សម័យ​របស់​អ្នក​បាន​ផុត​កំណត់ ។ សូម​កត់ត្រា​ចូល​ម្ដងទៀត ។"
+JLIB_DATABASE_ERROR_LOAD_DATABASE_DRIVER="ពុំ​អាច​ផ្ទុក​កម្មវិធី​បញ្ជា​ឃ្លាំង​ទិន្នន័យ៖ %s"
 
 ;Necessary for errors
 ADMIN_EMAIL="អ៊ីមែល​អ្នកគ្រប់គ្រង"
